[project]
name = "basicagentdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asttokens>=3.0.1",
    "comm>=0.2.3",
    "dotenv>=0.9.9",
    "gradio>=6.1.0",
    "ollama>=0.6.1",
    "openai>=2.8.1",
    "pydantic>=2.12.4",
    "pypdf>=6.4.1",
]

[package.dev-dependencies]
dev = [
    { name = "ipykernel" },
]
